# GotaChallenge

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
src/: .flake8  pyproject.toml
src/backend/: prompt.py  urls.py
src/backend/celery_backend/: celery_beat_schedule.py
src/backend/settings/: settings.py
src/backend/static/css/: base.css
src/backend/storage/: overwrite_storage.py
src/backend/templates/admin/: base_site.html
src/core/: signals.py
src/core/admin/: __init__.py  action_admin.py  device_admin.py  ingredient_admin.py  recipy_admin.py  recipy_step_admin.py
src/core/api/: urls.py
src/core/api/serializers/: __init__.py  action_serializers.py  device_serializers.py  ingredient_serializers.py  recipy_serializers.py  recipy_step_serializers.py  user_serializers.py
src/core/api/views/: __init__.py  action_views.py  device_views.py  ingredient_views.py  recipy_step_views.py  recipy_views.py  user_views.py
src/core/factories/: __init__.py  action_factories.py  device_factories.py  ingredient_factories.py  recipy_factories.py  recipy_step_factories.py  user_factories.py
src/core/helpers/: handle_storage.py
src/core/migrations/: 0001_initial.py  0002_auto_20220327_1808.py  0002_auto_20220327_2052.py  0002_auto_20220328_2109.py
src/core/models/: __init__.py  abstract.py  action.py  device.py  ingredient.py  recipy.py  recipy_step.py  user.py
src/core/models/tests/: test_abstract.py  (+4 more)
src/core/querysets/: __init__.py  device_querysets.py  ingredient_querysets.py  recipy_querysets.py  recipy_step_querysets.py
(+19 files in other folders)
